fix spacing again

--- a/frontend/src/styles/contato.module.scss
+++ b/frontend/src/styles/contato.module.scss
@@ -48,7 +48,7 @@
       margin-top: 5.25rem;
       display: flex;
       flex-direction: column;
-      gap: 3vh;
+      gap: 10vh;
     }
 
 
